--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
+<!-- <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -322,7 +322,8 @@
       </div>
     </div>
   </div>
-</main>
+</main> -->
+
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
@@ -334,3 +335,9 @@
 
 
 <router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
+<app-header></app-header>
+<app-filter></app-filter>
+<app-car-listing></app-car-listing>
+
+<app-footer></app-footer>
