--- a/src/app/car-listing/car-listing.component.html
+++ b/src/app/car-listing/car-listing.component.html
@@ -1,6 +1,6 @@
 <div class="car-list">
 
-  <div class="car-card" *ngFor="let car of cars">
+  <div class="car-card" *ngFor="let car of carsServiceList">
       <img [src]="car.imageUrl" alt="Imagem do carro">
       <div class="car-info">
           <h3>{{ car.title }}</h3>
