--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,10 +334,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
+
 <router-outlet></router-outlet>
-<app-nav-bar></app-nav-bar>
-<app-header></app-header>
+<!-- <app-listagem-entrada></app-listagem-entrada> -->
+<!-- <app-header></app-header>
 <app-filter></app-filter>
 <app-car-listing></app-car-listing>
+<app-footer></app-footer> -->
 
-<app-footer></app-footer>
