--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,5 +5,6 @@
       <li><a href="/about">Sobre</a></li>
       <li><a href="/services">Serviços</a></li>
       <li><a href="/contact">Contato</a></li>
+      <li><a href="/cadastro">Cadastre-se</a></li>
   </ul>
 </nav>
