add autenticacao jwt angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,7 +334,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-
+<!-- <mat-slide-toggle>Toggle me!</mat-slide-toggle> -->
 <router-outlet></router-outlet>
 <!-- <app-listagem-entrada></app-listagem-entrada> -->
 <!-- <app-header></app-header>
