--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,5 +6,6 @@
       <li><a href="/services">Serviços</a></li>
       <li><a href="/contact">Contato</a></li>
       <li><a href="/cadastro">Cadastre-se</a></li>
+      <li><a href="/login">Login</a></li>
   </ul>
 </nav>
