--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,5 +7,6 @@
       <li><a href="/contact">Contato</a></li>
       <li><a href="/cadastro">Cadastre-se</a></li>
       <li><a href="/login">Login</a></li>
+      <li><a href="/cadastro-car">cadastro-car</a></li>
   </ul>
 </nav>
