--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,13 @@
 <nav class="navbar">
   <div class="nav-brand">Minha Aplicação</div>
   <ul class="nav-links">
-      <li><a href="/home">Home</a></li>
-      <li><a href="/about">Sobre</a></li>
-      <li><a href="/services">Serviços</a></li>
-      <li><a href="/contact">Contato</a></li>
-      <li><a href="/cadastro">Cadastre-se</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/cadastro-car">cadastro-car</a></li>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/about">Sobre</a></li>
+    <li><a routerLink="/services">Serviços</a></li>
+    <li><a routerLink="/contact">Contato</a></li>
+    <li><a routerLink="/cadastro">Cadastre-se</a></li>
+    <li><a routerLink="/login">Login</a></li>
+    <li><a routerLink="/cadastro-car">Cadastro de Carro</a></li>
+
   </ul>
 </nav>
