--- a/src/app/cadastro-car/cadastro-car.component.html
+++ b/src/app/cadastro-car/cadastro-car.component.html
@@ -1,4 +1,4 @@
-<p>cadastro-car works!</p>
+<app-nav-bar></app-nav-bar>
 <div class="car-create-container">
   <form (ngSubmit)="createCar()">
     <div class="form-group">
@@ -29,3 +29,4 @@
     <button type="submit" class="btn">Cadastrar Carro</button>
   </form>
 </div>
+<app-footer></app-footer>
