--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,18 @@
 <nav class="navbar">
   <div class="nav-brand">Minha Aplicação</div>
   <ul class="nav-links">
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/about">Sobre</a></li>
-    <li><a routerLink="/services">Serviços</a></li>
-    <li><a routerLink="/contact">Contato</a></li>
+    <li><a routerLink="/home">Listagem</a></li>
     <li><a routerLink="/cadastro">Cadastre-se</a></li>
-    <li><a routerLink="/login">Login</a></li>
+    <li *ngIf="tokenService.isLoggedIn(); else loginLink">
+      <a routerLink="/login">Logout</a>
+    </li>
+
+    <!-- Template alternativo para Login -->
+    <ng-template #loginLink>
+      <li>
+        <a routerLink="/login">Login</a>
+      </li>
+    </ng-template>
     <li><a routerLink="/cadastro-car">Cadastro de Carro</a></li>
 
   </ul>
