--- a/src/app/cadastro-car/cadastro-car.component.html
+++ b/src/app/cadastro-car/cadastro-car.component.html
@@ -1,32 +1,56 @@
 <app-nav-bar></app-nav-bar>
+<form (ngSubmit)="createCar()" #carForm="ngForm">
 <div class="car-create-container">
-  <form (ngSubmit)="createCar()">
+    <!-- Nome -->
     <div class="form-group">
       <label for="nome">Nome</label>
-      <input type="text" id="nome" [(ngModel)]="car.nome" name="nome">
+      <input type="text" id="nome" [(ngModel)]="car.nome" name="nome" required>
+      <div *ngIf="carForm.submitted && carForm.form.controls['nome'].invalid" class="alert alert-danger">
+        O nome é obrigatório.
+      </div>
     </div>
 
+    <!-- Marca -->
     <div class="form-group">
       <label for="marca">Marca</label>
-      <input type="text" id="marca" [(ngModel)]="car.marca" name="marca">
+      <input type="text" id="marca" [(ngModel)]="car.marca" name="marca" required>
+      <div *ngIf="carForm.submitted && carForm.form.controls['marca'].invalid" class="alert alert-danger">
+        A marca é obrigatória.
+      </div>
     </div>
 
+    <!-- Modelo -->
     <div class="form-group">
       <label for="modelo">Modelo</label>
-      <input type="text" id="modelo" [(ngModel)]="car.modelo" name="modelo">
+      <input type="text" id="modelo" [(ngModel)]="car.modelo" name="modelo" required>
+      <div *ngIf="carForm.submitted && carForm.form.controls['modelo'].invalid" class="alert alert-danger">
+        O modelo é obrigatório.
+      </div>
     </div>
 
+    <!-- Preço -->
     <div class="form-group">
       <label for="price">Preço</label>
-      <input type="number" id="price" [(ngModel)]="car.price" name="price">
+      <input type="number" id="price" [(ngModel)]="car.price" name="price" required min="0">
+      <div *ngIf="carForm.submitted && carForm.form.controls['price'].invalid" class="alert alert-danger">
+        <div *ngIf="carForm.form.controls['price'].errors && carForm.form.controls['price'].errors['required']">O preço é obrigatório.</div>
+        <div *ngIf="carForm.form.controls['price'].errors && carForm.form.controls['price'].errors['min']">O preço não pode ser negativo.</div>
+      </div>
     </div>
 
+
+
+    <!-- URL da Imagem -->
     <div class="form-group">
       <label for="url_imagem">URL da Imagem</label>
-      <input type="text" id="url_imagem" [(ngModel)]="car.url_imagem" name="url_imagem">
+      <input type="text" id="url_imagem" [(ngModel)]="car.url_imagem" name="url_imagem" required>
+      <div *ngIf="carForm.submitted && carForm.form.controls['url_imagem'].invalid" class="alert alert-danger">
+        A URL da imagem é obrigatória.
+      </div>
     </div>
 
-    <button type="submit" class="btn">Cadastrar Carro</button>
-  </form>
+    <!-- Botão de Submissão -->
+    <button type="submit" class="btn" [disabled]="!carForm.valid">Cadastrar Carro</button>
 </div>
+</form>
 <app-footer></app-footer>
